# animus-transport-graphql

./: Cargo.toml  LICENSE  README.md  plugin.toml
.github/workflows/: release.yml
src/: backend.rs  config.rs  control_client.rs  lib.rs  main.rs  schema.rs  server.rs
src/resolvers/: agent.rs  daemon.rs  mod.rs  plugin.rs  queue.rs  subject.rs  workflows.rs
tests/: contract.rs
